--- a/.env
+++ b/.env
@@ -1,1 +1,8 @@
 MONGODB_URI = 'mongodb+srv://mintesnot:tsK5x3MqRZw4CJmp@ma-8745.lxs3s.mongodb.net/share?retryWrites=true&w=majority'
+GOOGLE_SECRET = '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'
+GOOGLE_ID = '928690611598-fbiepdieukl1jj9sp5ca25772udpsm9d.apps.googleusercontent.com'
+
+NEXTAUTH_SECRET = 'Q7OWFLRwyjyREunHwkHSphaVhw3GkFwNtPz94t/dz9A='
+NEXTAUTH_URL = 'http://localhost:3000'
+NEXTAUTH_URL_INTENAL = 'http://localhost:3000'
+
