--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI = 'mongodb+srv://mintesnot:tsK5x3MqRZw4CJmp@ma-8745.lxs3s.mongodb.net/share?retryWrites=true&w=majority'
+MONGODB_URI = 'mongodb+srv://mintesnot:FxK8Tk4tFOPz31V4@ma-8745.lxs3s.mongodb.net/?retryWrites=true&w=majority&appName=MA-8745'
 GOOGLE_SECRET = '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'
 GOOGLE_ID = '928690611598-fbiepdieukl1jj9sp5ca25772udpsm9d.apps.googleusercontent.com'
 
