--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bcrypt": "^5.1.1",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0",
-    "next": "14.0.4",
+    "next": "^15.3.3",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
